# cookiecutter-triton

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  benchmark.py  pyproject.toml  {{cookiecutter.kernel_name}}.py
