[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.kernel_description }}"
authors = [{ name = "{{ cookiecutter.author }}" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "triton>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
